# MCP-server-built-in-Rust-to-interact-with-the-Ethereum-blockchain

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  ethereum.rs  lib.rs  main.rs  server.rs
src/tools/: balance.rs  mod.rs  price.rs  swap.rs
tests/: integration_tests.rs
