[package]
name = "ethereum-trading-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
alloy = { version = "0.1", features = ["full", "node-bindings", "rpc-types-eth", "providers", "signers", "contract", "network", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
url = "2.5"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
